--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -38,31 +38,57 @@
     border-radius: 4px;
 }
 
-.content h1 {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    font-size: 2rem;
-    font-weight: 600;
-}
-
 .content {
     font-size: 1.05rem;
     line-height: 1.6;
     color: #333;
 }
 
+.content h1 {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 800;
+}
+
 .content h2 {
     margin-top: 3rem;
     margin-bottom: 0.6rem;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 1.7rem;
+    font-weight: 700;
 }
 
 .content h3 {
     margin-top: 2rem;
     margin-bottom: 0.5rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 600;
+}
+
+.content p+ul,
+.content p+ol {
+    margin-top: -1rem;
+    /* p태그의 margin-bottom(1.5rem)을 상쇄하여 간격을 0.5rem으로 만듦 */
+}
+
+.content blockquote {
+    margin: 1.5rem 0;
+    padding: 1rem 1.5rem;
+    /* border-left: 4px solid #8e70df; */
+    border-left: 4px solid #663399;
+    /* 강조 색상 (보라색) */
+    background-color: #f9f9f9;
+    /* 연한 회색 배경 */
+    color: #555;
+    font-style: italic;
+    /* 이탤릭체 (선택사항) */
+    border-radius: 0 4px 4px 0;
+    /* 오른쪽 둥근 모서리 */
+}
+
+/* Blockquote 내부의 문단(p) 여백 제거 */
+.content blockquote p {
+    margin-bottom: 0;
 }
 
 .content p {
