--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -5,7 +5,7 @@
 
 .container {
     /* max-width를 더 좁게 강제 조정 */
-    max-width: 47rem;
+    max-width: 45rem;
     margin: 0 auto;
     /* padding을 제거하거나 아주 작게 설정 */
     padding: 0 0rem;
@@ -18,7 +18,7 @@
     font-size: 1.3rem;
     text-decoration: none;
     color: #333333;
-    font-weight: 600;
+    font-weight: bolder;
 }
 
 .nav {
