--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -37,16 +37,18 @@
 }
 
 .postLink h2 {
-    font-size: 1.7rem;
-    font-weight: 350;
+    font-size: 1.5rem;
+    font-weight: bolder;
     margin-bottom: -0.8rem;
     transition: color 0.2s ease;
+    color: #333;
 }
 
 
 .postLink h3 {
     font-size: 1.1rem;
-    font-weight: 350;
+    font-weight: 450;
+    color: #555;
 }
 
 .metaContainer {
