--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -7,7 +7,6 @@
     /* max-width를 더 좁게 강제 조정 */
     max-width: 45rem;
     margin: 0 auto;
-    /* padding을 제거하거나 아주 작게 설정 */
     padding: 0 0rem;
     display: flex;
     align-items: center;
@@ -24,6 +23,7 @@
 .nav {
     display: flex;
     gap: 1rem;
+    margin-right: 2.5rem;
 }
 
 .navLink {
