--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -54,9 +54,15 @@
 }
 
 .content {
-    font-size: 1.05rem;
-    line-height: 1.6;
+    line-height: 1.8;
     color: #333;
+    font-family: sans-serif;
+    font-family: var(--font-sans);
+    font-weight: 450;
+}
+
+.content p {
+    max-width: fit-content;
 }
 
 .content h1 {
@@ -80,26 +86,24 @@
     font-weight: bold;
 }
 
+.content ul li,
+.content ol li {
+    margin-bottom: 0.6rem;
+}
+
 .content p+ul,
 .content p+ol {
-    margin-top: -1rem;
     /* p태그의 margin-bottom(1.5rem)을 상쇄하여 간격을 0.5rem으로 만듦 */
+    margin-top: -1rem;
 }
 
 .content blockquote {
     margin: 1.5rem 0;
     padding: 1rem 1.5rem;
-    /* border-left: 4px solid #8e70df; */
-    /* border-left: 4px solid #663399; */
     border-left: 3px solid #e6e6e6;
-    /* 강조 색상 (보라색) */
     background-color: #f9f9f9;
-    /* 연한 회색 배경 */
     color: #555;
-    font-style: italic;
-    /* 이탤릭체 (선택사항) */
     border-radius: 0 4px 4px 0;
-    /* 오른쪽 둥근 모서리 */
 }
 
 /* Blockquote 내부의 문단(p) 여백 제거 */
@@ -113,7 +117,7 @@
 
 .content code {
     background: #f5f5f5;
-    padding: 0.2rem 0.4rem;
+    padding: 0.2rem 0.2rem;
     border-radius: 3px;
     font-size: 0.9em;
 }
@@ -137,7 +141,6 @@
     padding-top: 2rem;
     border-top: 1px solid #f0f0f0;
 }
-
 
 /* TOC Styles */
 .toc {
